--- a/index.html
+++ b/index.html
@@ -3,204 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
-        <div class="logo">
-            <img src="http://placehold.it/150x100" alt="логотип">
-        </div>
-        <div class="nav">
-          <ul>
-            <li>
-              <a href="#">Студия</a>
-            </li>
-            <li>
-              <a href="#">Клиенты</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </div>
-        <div class="user-block">
-          <a class="purchase" href="#">Корзина</a>
-        </div>
-      </div>
 
-      <figure class="index-promo">
-        <div class="index-promo-item-1">
-          <h2 class="index-promo-name">Долго, дорого, скрупулезно.</h2>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
- <!--
-        <div class="index-promo-item-2">
-          <h2 class="index-promo-name">Любим математику как никто другой</h2>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Любим математику как никто другой">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
-
-        <div class="index-promo-item-3">
-          <h2 class="index-promo-name">Только ночь,только хардкор</h2>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Только ночь, только хардкор">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
-  -->
-      </figure>
-    </header>
-
-    <main class="container">
-
-      <section class="features">
-        <div class="features-item">
-          <div class="features-item-red">
-            <img src="http://placehold.it/150x100" alt="Веб-сайты">
-          </div>
-          <b class="features-name">Веб-сайты</b>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="btn" title="Заказать" href="#">Заказать</a>
-        </div>
-        <div class="features-item">
-          <div class="features-item-green">
-            <img src="http://placehold.it/150x100" alt="Приложения">
-          </div>
-          <b class="features-name">Приложения</b>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="btn-green" title="Заказать" href="#">Заказать</a>
-        </div>
-        <div class="features-item">
-          <div class="features-item-yellow">
-            <img src="http://placehold.it/150x100" alt="Презентации">
-          </div>
-          <b class="features-name">Презентации</b>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="btn-yellow" title="Заказать" href="#">Заказать</a>
-        </div>
-      </section>
-
-      <hr class="index-hr">
-
-      <div class="index-content">
-        <div class="index-content-left">
-          <h3 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-            превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <b class="index-list-name">Выполняем заказы на разработку:</b>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-        </div>
-
-        <div class="index-content-right">
-          <img src="http://placehold.it/150x100" alt="логотип">
-          <p class="index-content-data">с 2004 года любим точность во всем:</p>
-          <ul>
-            <li>
-              <p class="index-content-data-show">146<sup>%</sup></p>
-              <p class="index-content-data-description">Уровень самоотдачи</p>
-            </li>
-            <li>
-              <p class="index-content-data-show">100<sup>%</sup></p>
-              <p class="index-content-data-description">Соблюдение сроков</p>
-            </li>
-            <li>
-              <p class="index-content-data-show">50<sup>%</sup></p>
-              <p class="index-content-data-description">Минимальная предоплата</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <hr class="index-hr">
-
-      <div class="clients-logo">
-        <ul>
-          <li>
-            <a title="html-academy" href="#">
-              <img src="http://placehold.it/150x100" alt="html-academy" width="150" height="100">
-            </a>
-          </li>
-          <li>
-            <a title="borodinski" href="#">
-              <img src="http://placehold.it/150x100" alt="borodinski" width="150" height="100">
-            </a>
-          </li>
-          <li>
-            <a title="pink" href="#">
-              <img src="http://placehold.it/150x100" alt="pink" width="150" height="100">
-            </a>
-          </li>
-          <li>
-            <a title="mishka" href="#">
-              <img src="http://placehold.it/150x100" alt="mishka" width="150" height="100">
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <hr class="index-hr">
-    </main>
-
-    <footer>
-      <div class="container">
-        <div class="footer-map">
-          <a title="карта проезда" href="#">
-            <img src="http://placehold.it/150x100" alt="карта проезда" width="150" height="100">
-          </a>
-        </div>
-        <section class="footer-contacts">
-          <p class="footer-conacts-title">NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a class="btn" href="#">Напишите нам</a>
-        </section>
-
-        <section class="footer-social">
-         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-       </section>
-        <section class="footer-info">
-          <p class="footer-info-title">Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-
-      </div>
-    </footer>
-
-    <div class="popup-write-us">
-      <div class="containers">
-        <h2 class="popup-write-us-title">Напишите нам</h2>
-        <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-          <label for="write-name">Ваше имя
-            <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
-          </label>
-          <label for="write-mail">Ваш e-mail
-            <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
-          </label>
-          <label for="write-post">Текст письма
-            <textarea name="post" id="write-post" rows="5" placeholder="Для отправки ответа"></textarea>
-          </label>
-            <button class="btn" type="submit">Отправить</button>
-         </form>
-      </div>
-    </div>
+    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
 
   </body>
 </html>
