--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </header>
 
-    <main class="container">
+    <div class="container">
 
       <section class="features">
         <div class="features-item">
@@ -158,7 +158,7 @@
       </div>
 
       <hr class="index-hr">
-    </main>
+    </div>
 
     <footer>
       <div class="container">
