--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
               <img src="http://placehold.it/150x100" alt="логотип">
             </a>
         </div>
-        <div class="nav">
+        <nav class="nav">
           <ul>
             <li>
               <a href="#">Студия</a>
@@ -29,7 +29,7 @@
               <a href="#">Контакты</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <div class="user-block">
           <a class="purchase" href="#">Корзина</a>
         </div>
@@ -40,63 +40,148 @@
     <main class="container">
 
       <div class="filters">
-        <div class="filter-price">
-          <b class="filter-title">СТОИМОСТЬ:</b>
-          <div>
-            фильтр стоимости не представляю пока как делать
-          </div>
-        </div>
-
         <form class="filter-grid-form" action="https://echo.htmlacademy.ru" method="post">
+          <div class="filter-price">
+            <b class="filter-title">СТОИМОСТЬ:</b>
+            <div>
+              фильтр стоимости не представляю пока как делать
+            </div>
+          </div>
+
             <p class="filter-form-title">Сетка</p>
-           <input type="text" name="text" value="" placeholder="Адаптивная">
-           <input type="text" name="text" value="" placeholder="Фиксированная">
-           <input type="text" name="text" value="" placeholder="Резиновая">
+            <ul class="filter-list">
+              <li>
+                  <input type="radio" name="text" value="" id="adapt" placeholder="Адаптивная">
+                  <label for="adapt">Адаптивная</label>
+              </li>
+              <li>
+                  <input type="radio" name="text" value="" id="fixed" placeholder="Фиксированная">
+                  <label for="fixed">Фиксированная</label>
+              </li>
+              <li>
+                  <input type="radio" name="text" value="" id="stretch" placeholder="Резиновая">
+                  <label for="stretch">Резиновая</label>
+              </li>
 
              <p class="filter-form-title">Особенности</p>
+             <ul class="filter-list">
+               <li>
+                 <input type="checkbox" name="text" value="" id="slider" placeholder="Слайдер">
+                 <label for="slider">Слайдер</label>
+               </li>
+               <li>
+                 <input type="checkbox" name="text" value="" id="benefit" placeholder="Блок преимуществ">
+                 <label for="benefit">Блок преимуществ</label>
+               </li>
+               <li>
+                 <input type="checkbox" name="text" value="" id="news" placeholder="Новости">
+                 <label for="news">Новости</label>
+               </li>
+               <li>
+                 <input type="checkbox" name="text" value="" id="gallery" placeholder="Галерея">
+                 <label for="gallery">Галерея</label>
+               </li>
+               <li>
+                 <input type="checkbox" name="text" value="" id="shop" placeholder="Корзина">
+                 <label for="shop">Корзина</label>
+               </li>
 
-            <input type="text" name="text" value="" placeholder="Слайдер">
-            <input type="text" name="text" value="" placeholder="Блок преимуществ">
-            <input type="text" name="text" value="" placeholder="Новости">
-            <input type="text" name="text" value="" placeholder="Галерея">
-            <input type="text" name="text" value="" placeholder="Корзина">
             <button class="btn" type="submit">Показать</button>
+            </ul>
 
           </form>
 
       </div>
 
-      <div class="sort">
-        <p class="sort-title">Сортировать:
-          <ul>
-            <li>По цене</li>
-            <li>По типу</li>
-            <li>По названию</li>
-          </ul>
-      </div>
+
 
       <div class="catalog-content">
-        <div class="catalog-item">
-          <a href="#" title="макет Sedona"> <img src="http://placehold.it/150x100" alt="макет Sedona"></a>
+        <div class="sort">
+          <p class="sort-title">Сортировать:
+            <ul>
+              <li>
+                <a href="#">По цене</a>
+              </li>
+              <li>
+                <a href="#">По типу</a>
+              </li>
+              <li>
+                <a href="#">По названию</a>
+              </li>
+            </ul>
+            <ul>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
         </div>
         <div class="catalog-item">
-          <a href="#" title="макет Pinr app"> <img src="http://placehold.it/150x100" alt="макет Pinr app"></a>
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет Sedona">
+          <div class="catalog-info">
+              <p class="catalog-info-title">Sedona</p>
+              <p class="catalog-info-description">Информационный сайт для туристов</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
         <div class="catalog-item">
-          <a href="#" title="макет Barbershop"> <img src="http://placehold.it/150x100" alt="макет Barbershop"></a>
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет Pink app">
+          <div class="catalog-info">
+              <p class="catalog-info-title">Pink app</p>
+              <p class="catalog-info-description">Продуктовый лендинг приложения для iOS и Android</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
         <div class="catalog-item">
-          <a href="#" title="макет Mishka"> <img src="http://placehold.it/150x100" alt="макет Mishka"></a>
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет Barbershop">
+          <div class="catalog-info">
+              <p class="catalog-info-title">Barbershop</p>
+              <p class="catalog-info-description">Сайт салоны красоты. Для мужчин, да.</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
         <div class="catalog-item">
-          <a href="#" title="макет A Plus"> <img src="http://placehold.it/150x100" alt="макет A Plus"></a>
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет Mishka">
+          <div class="catalog-info">
+              <p class="catalog-info-title">Mishka</p>
+              <p class="catalog-info-description">Интернет-магазин вязаных игрушек</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
         <div class="catalog-item">
-          <a href="#" title="Kbact"> <img src="http://placehold.it/150x100" alt="макет Kbact"></a>
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет A Plus">
+          <div class="catalog-info">
+              <p class="catalog-info-title">A Plus</p>
+              <p class="catalog-info-description">Лендинг курсов повышения квалификации</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
-      </div>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="http://placehold.it/150x100" alt="макет Kbact">
+          <div class="catalog-info">
+              <p class="catalog-info-title">Kbact</p>
+              <p class="catalog-info-description">Промо-сайт производителя крафтового кваса</p>
+              <a class="btn" href="#">9900 руб</a>
+          </div>
+        </div>
 
-      <div class="catalog-pages">
+      <div class="pagination">
         <ul>
           <li><a href="#" title="1">1</a></li>
           <li><a href="#" title="2">2</a></li>
@@ -107,6 +192,18 @@
 
     </main>
 
+    <div class="map">
+      <div class="map-wrapper"></div>
+      <div class="container">
+        <section class="map-contacts">
+          <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="btn" href="#">Напишите нам</a>
+        </section>
+      </div>
+    </div>
+
     <footer>
       <div class="container">
         <div class="footer-map">
@@ -114,13 +211,6 @@
             <img src="http://placehold.it/150x100" alt="карта проезда" width="150" height="100">
           </a>
         </div>
-        <section class="footer-contacts">
-          <p class="footer-conacts-title">NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a class="btn" href="#">Напишите нам</a>
-        </section>
-
         <section class="footer-social">
          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
@@ -130,17 +220,8 @@
           <p class="footer-info-title">Давайте дружить, это выгодно!</p>
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </section>
-
       </div>
     </footer>
-
-    <div class="popup-catalog-item-hover">
-      <div class="container">
-        <p class="popup-catalog-item-title">Sedona</p>
-        <p class="popup-catalog-item-description">Информационный сайт для туристов</p>
-        <a class="btn" href="#">9900 руб</a>
-      </div>
-    </div>
 
   </body>
 </html>
