--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="main-header">
       <div class="container">
         <div class="logo">
-            <img src="http://placehold.it/150x100" alt="логотип">
+          <img src="http://placehold.it/150x100" alt="логотип">
         </div>
-        <div class="nav">
+        <nav class="nav">
           <ul>
             <li>
               <a href="#">Студия</a>
@@ -27,55 +27,50 @@
               <a href="#">Контакты</a>
             </li>
           </ul>
-        </div>
-        <div class="user-block">
-          <a class="purchase" href="#">Корзина</a>
-        </div>
+		  <div class="user-block">
+			<a class="purchase" href="#">Корзина</a>
+		  </div>
+		</nav>
       </div>
+
+
+	<div class="container">
+      <div class="slider">
+        <div class="slider-item slider-item-design">
+          <h2 class="slider-item-title">Долго, дорого, скрупулезно.</h2>
+          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
+          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+        </div>
+
+        <div class="slider-item slider-item-math">
+          <h2 class="slider-item-title">Любим математику как никто другой</h2>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <img src="http://placehold.it/150x100" alt="Любим математику как никто другой">
+          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+        </div>
+
+        <div class="slider-item slider-item-worktime">
+          <h2 class="slider-item-title">Только ночь,только хардкор</h2>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
+          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+        </div>
+
+      </div>
+    </div>
+  </header>
 
   <div class="container">
-      <figure class="index-promo">
-        <div class="index-promo-item-1">
-          <h2 class="index-promo-name">Долго, дорого, скрупулезно.</h2>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
- <!--
-        <div class="index-promo-item-2">
-          <h2 class="index-promo-name">Любим математику как никто другой</h2>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Любим математику как никто другой">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
 
-        <div class="index-promo-item-3">
-          <h2 class="index-promo-name">Только ночь,только хардкор</h2>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a class="index-promo-photo" href="#">
-            <img src="http://placehold.it/150x100" alt="Только ночь, только хардкор">
-          </a>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
-  -->
-        </figure>
-      </div>
-    </header>
-
-    <div class="container">
-
-      <section class="features">
-        <div class="features-item">
+    <section class="features">
+		<div class="features-item">
           <div class="features-item-red">
             <img src="http://placehold.it/150x100" alt="Веб-сайты">
           </div>
           <b class="features-name">Веб-сайты</b>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="btn" title="Заказать" href="#">Заказать</a>
+          <a class="btn btn-red" title="Заказать" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-item-green">
@@ -83,7 +78,7 @@
           </div>
           <b class="features-name">Приложения</b>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="btn-green" title="Заказать" href="#">Заказать</a>
+          <a class="btn btn-green" title="Заказать" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-item-yellow">
@@ -91,17 +86,18 @@
           </div>
           <b class="features-name">Презентации</b>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="btn-yellow" title="Заказать" href="#">Заказать</a>
+          <a class="btn btn-yellow" title="Заказать" href="#">Заказать</a>
         </div>
       </section>
 
-      <hr class="index-hr">
 
       <div class="index-content">
         <div class="index-content-left">
           <h3 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-            превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <p>
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
           <b class="index-list-name">Выполняем заказы на разработку:</b>
           <ul>
             <li>Веб-сайтов любой сложности</li>
@@ -130,8 +126,6 @@
         </div>
       </div>
 
-      <hr class="index-hr">
-
       <div class="clients-logo">
         <ul>
           <li>
@@ -156,8 +150,18 @@
           </li>
         </ul>
       </div>
+    </div>
 
-      <hr class="index-hr">
+    <div class="map">
+      <div class="map-wrapper"></div>
+      <div class="container">
+        <section class="map-contacts">
+          <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="btn" href="#">Напишите нам</a>
+        </section>
+      </div>
     </div>
 
     <footer>
@@ -167,13 +171,6 @@
             <img src="http://placehold.it/150x100" alt="карта проезда" width="150" height="100">
           </a>
         </div>
-        <section class="footer-contacts">
-          <p class="footer-conacts-title">NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a class="btn" href="#">Напишите нам</a>
-        </section>
-
         <section class="footer-social">
          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
@@ -183,26 +180,27 @@
           <p class="footer-info-title">Давайте дружить, это выгодно!</p>
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </section>
-
       </div>
     </footer>
 
     <div class="popup-write-us">
-      <div class="containers">
         <h2 class="popup-write-us-title">Напишите нам</h2>
+        <a href="#" class="popup-close"></a>
         <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-          <label for="write-name">Ваше имя
+          <label for="write-name">
+            <span>Ваше имя</span>
             <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
           </label>
-          <label for="write-mail">Ваш e-mail
+          <label for="write-mail">
+            <span>Ваш e-mail</span>
             <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
           </label>
-          <label for="write-post">Текст письма
+          <label for="write-post">
+            <span>Текст письма</span>
             <textarea name="post" id="write-post" rows="5" placeholder="Для отправки ответа"></textarea>
           </label>
             <button class="btn" type="submit">Отправить</button>
          </form>
-      </div>
     </div>
 
   </body>
