--- a/catalog.html
+++ b/catalog.html
@@ -64,38 +64,33 @@
             <input type="radio" name="text" value="" id="stretch" placeholder="Резиновая">
             <label for="stretch">Резиновая</label>
           </li>
-
-          <p class="filter-form-title">Особенности</p>
-          <ul class="filter-list">
-            <li>
-              <input type="checkbox" name="text" value="" id="slider" placeholder="Слайдер">
-              <label for="slider">Слайдер</label>
-            </li>
-            <li>
-              <input type="checkbox" name="text" value="" id="benefit" placeholder="Блок преимуществ">
-              <label for="benefit">Блок преимуществ</label>
-            </li>
-            <li>
-              <input type="checkbox" name="text" value="" id="news" placeholder="Новости">
-              <label for="news">Новости</label>
-            </li>
-            <li>
-              <input type="checkbox" name="text" value="" id="gallery" placeholder="Галерея">
-              <label for="gallery">Галерея</label>
-            </li>
-            <li>
-              <input type="checkbox" name="text" value="" id="shop" placeholder="Корзина">
-              <label for="shop">Корзина</label>
-            </li>
-
-            <button class="btn" type="submit">Показать</button>
-          </ul>
-
+        </ul>
+        <p class="filter-form-title">Особенности</p>
+        <ul class="filter-list">
+          <li>
+            <input type="checkbox" name="text" value="" id="slider" placeholder="Слайдер">
+            <label for="slider">Слайдер</label>
+          </li>
+          <li>
+            <input type="checkbox" name="text" value="" id="benefit" placeholder="Блок преимуществ">
+            <label for="benefit">Блок преимуществ</label>
+          </li>
+          <li>
+            <input type="checkbox" name="text" value="" id="news" placeholder="Новости">
+            <label for="news">Новости</label>
+          </li>
+          <li>
+            <input type="checkbox" name="text" value="" id="gallery" placeholder="Галерея">
+            <label for="gallery">Галерея</label>
+          </li>
+          <li>
+            <input type="checkbox" name="text" value="" id="shop" placeholder="Корзина">
+            <label for="shop">Корзина</label>
+          </li>
+          <button class="btn" type="submit">Показать</button>
+        </ul>
       </form>
-
     </div>
-
-
 
     <div class="catalog-content">
       <div class="sort">
@@ -120,73 +115,74 @@
             </li>
           </ul>
       </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
+      <div class="catalog-wrapper">
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-sedona.jpg" alt="макет Sedona" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">Sedona</p>
+            <p class="catalog-info-description">Информационный сайт для туристов</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
-        <img src="img/img-sedona.jpg" alt="макет Sedona" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">Sedona</p>
-          <p class="catalog-info-description">Информационный сайт для туристов</p>
-          <a class="btn" href="#">9900 руб</a>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-pink.jpg" alt="макет Pink app" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">Pink app</p>
+            <p class="catalog-info-description">Продуктовый лендинг приложения для iOS и Android</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-barbershop.jpg" alt="макет Barbershop" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">Barbershop</p>
+            <p class="catalog-info-description">Сайт салоны красоты. Для мужчин, да.</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-mishka.jpg" alt="макет Mishka" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">Mishka</p>
+            <p class="catalog-info-description">Интернет-магазин вязаных игрушек</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-aplus.jpg" alt="макет A Plus" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">A Plus</p>
+            <p class="catalog-info-description">Лендинг курсов повышения квалификации</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-header">
+            <span></span><span></span><span></span>
+          </div>
+          <img src="img/img-kvast.jpg" alt="макет Кваст" width="360" height="576">
+          <div class="catalog-info">
+            <p class="catalog-info-title">Кваст</p>
+            <p class="catalog-info-description">Промо-сайт производителя крафтового кваса</p>
+            <a class="btn" href="#">9900 руб</a>
+          </div>
         </div>
       </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
-        </div>
-        <img src="img/img-pink.jpg" alt="макет Pink app" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">Pink app</p>
-          <p class="catalog-info-description">Продуктовый лендинг приложения для iOS и Android</p>
-          <a class="btn" href="#">9900 руб</a>
-        </div>
-      </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
-        </div>
-        <img src="img/img-barbershop.jpg" alt="макет Barbershop" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">Barbershop</p>
-          <p class="catalog-info-description">Сайт салоны красоты. Для мужчин, да.</p>
-          <a class="btn" href="#">9900 руб</a>
-        </div>
-      </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
-        </div>
-        <img src="img/img-mishka.jpg" alt="макет Mishka" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">Mishka</p>
-          <p class="catalog-info-description">Интернет-магазин вязаных игрушек</p>
-          <a class="btn" href="#">9900 руб</a>
-        </div>
-      </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
-        </div>
-        <img src="img/img-aplus.jpg" alt="макет A Plus" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">A Plus</p>
-          <p class="catalog-info-description">Лендинг курсов повышения квалификации</p>
-          <a class="btn" href="#">9900 руб</a>
-        </div>
-      </div>
-      <div class="catalog-item">
-        <div class="catalog-header">
-          <span></span><span></span><span></span>
-        </div>
-        <img src="img/img-kvast.jpg" alt="макет Кваст" width="360" height="576">
-        <div class="catalog-info">
-          <p class="catalog-info-title">Кваст</p>
-          <p class="catalog-info-description">Промо-сайт производителя крафтового кваса</p>
-          <a class="btn" href="#">9900 руб</a>
-        </div>
-      </div>
-
       <div class="pagination">
         <ul>
           <li><a href="#" title="1">1</a></li>
@@ -195,7 +191,7 @@
           <li><a href="#" title="Следующая">Следующая</a></li>
         </ul>
       </div>
-
+    </div>
   </main>
 
   <div class="map">
