--- a/catalog.html
+++ b/catalog.html
@@ -46,48 +46,48 @@
         <div class="filter-price">
           <b class="filter-title">СТОИМОСТЬ:</b>
           <div>
-            фильтр стоимости не представляю пока как делать
+            слайдер
           </div>
         </div>
 
         <p class="filter-form-title">Сетка</p>
         <ul class="filter-list">
           <li>
-            <input type="radio" name="text" value="" id="adapt" placeholder="Адаптивная">
+            <input type="radio" name="adapt" value="Адаптивная" id="adapt" placeholder="Адаптивная">
             <label for="adapt">Адаптивная</label>
           </li>
           <li>
-            <input type="radio" name="text" value="" id="fixed" placeholder="Фиксированная">
+            <input type="radio" name="fixed" value="Фиксированная" id="fixed" placeholder="Фиксированная">
             <label for="fixed">Фиксированная</label>
           </li>
           <li>
-            <input type="radio" name="text" value="" id="stretch" placeholder="Резиновая">
-            <label for="stretch">Резиновая</label>
+            <input type="radio" name="fluid" value="Резиновая" id="fluid" placeholder="Резиновая">
+            <label for="fluid">Резиновая</label>
           </li>
         </ul>
         <p class="filter-form-title">Особенности</p>
         <ul class="filter-list">
           <li>
-            <input type="checkbox" name="text" value="" id="slider" placeholder="Слайдер">
+            <input type="checkbox" name="slider" value="" id="slider" placeholder="Слайдер">
             <label for="slider">Слайдер</label>
           </li>
           <li>
-            <input type="checkbox" name="text" value="" id="benefit" placeholder="Блок преимуществ">
+            <input type="checkbox" name="benefit" value="" id="benefit" placeholder="Блок преимуществ">
             <label for="benefit">Блок преимуществ</label>
           </li>
           <li>
-            <input type="checkbox" name="text" value="" id="news" placeholder="Новости">
+            <input type="checkbox" name="news" value="" id="news" placeholder="Новости">
             <label for="news">Новости</label>
           </li>
           <li>
-            <input type="checkbox" name="text" value="" id="gallery" placeholder="Галерея">
+            <input type="checkbox" name="gallery" value="" id="gallery" placeholder="Галерея">
             <label for="gallery">Галерея</label>
           </li>
           <li>
-            <input type="checkbox" name="text" value="" id="shop" placeholder="Корзина">
+            <input type="checkbox" name="shop" value="" id="shop" placeholder="Корзина">
             <label for="shop">Корзина</label>
           </li>
-          <button class="btn" type="submit">Показать</button>
+          <button class="btn btn-filter" type="submit">Показать</button>
         </ul>
       </form>
     </div>
