--- a/catalog.html
+++ b/catalog.html
@@ -197,7 +197,7 @@
 
   <footer>
     <div class="map">
-      <div class="map-wrapper ">
+      <div class="container">
         <section class="map-contacts">
           <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
