--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     <div class="container">
       <div class="slider">
         <div class="slider-item slider-item-design">
-          <h2 class="slider-item-title">Долго, дорого, скрупулезно.</h2>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+          <h2 class="slider-item-title">Долго, дорого, <br>
+            скрупулезно.</h2>
+          <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+          <a class="btn slider" title="Узнать больше" href="#">Узнать больше</a>
         </div>
 
         <div class="slider-item slider-item-math">
